--- a/server/server.cfg
+++ b/server/server.cfg
@@ -1,24 +1,24 @@
-﻿#ServerConfig
+﻿#
+#    Server Configuration
+#
 port:80
 verifyEmail:false
-serverDomain:http://c453.pw
+serverDomain:http://25.48.226.249
 #serverEmail:
 #serverEmailPassword:
 #smtpHost:
 #smtpPort:
 #
-#Database Config
+#    Database Configuration
 #
 db_host:127.0.0.1
 db_database:rotmgprod
 db_user:root
 db_auth:
 #
-#Servers
+#    Server list
 #
 svrNum:1
-#svr0Name:Testing Server
-#svr0Adr:69.140.1.203
+svr0Name:Server
+svr0Adr:25.48.226.249
 #svr0Location:Arlington, Virginia, USA
-svr0Name:Localhost
-svr0Adr:127.0.0.1
