--- a/wServer/wServer.cfg
+++ b/wServer/wServer.cfg
@@ -1,21 +1,23 @@
 ﻿#
-#Database Config
+#    Server Configuration
+#
+port:2050
+maxClients:100
+tps:5
+whiteList:false
+verifyEmail:false
+whitelistTurnOff:2014-07-31 12:00:00
+serverDomain:http://25.48.226.249
+broadcastNews:true
+testingMerchants:true
+#serverEmail:
+#serverEmailPassword:
+#smtpHost:
+#smtpPort:
+#
+#    Database Config
 #
 db_host:127.0.0.1
 db_database:rotmgprod
 db_user:root
 db_auth:
-#
-#Internal Server Config
-#
-maxClients:100
-tps:5
-port:2050
-whiteList:false
-verifyEmail:false
-whitelistTurnOff:2014-07-31 12:00:00
-serverDomain:http://c453.pw
-#serverEmail:
-#serverEmailPassword:
-#smtpHost:
-#smtpPort:
