Fixes from @ossimc82, AutoBroadcaster fix

--- a/server/server.cfg
+++ b/server/server.cfg
@@ -18,7 +18,9 @@ db_auth:
 #
 #    Server list
 #
-svrNum:1
-svr0Name:Server
-svr0Adr:25.48.226.249
+svrNum:2
+svr0Name:Server 1
+svr0Adr:127.0.0.1
 #svr0Location:Arlington, Virginia, USA
+svr1Name:Server 2
+svr1Adr:25.48.226.249
