Fixes and stuff from May 31th

--- a/Client Updater/Client Updater.csproj
+++ b/Client Updater/Client Updater.csproj
@@ -53,7 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientUpdater.cs" />
-    <Compile Include="Constans.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
