--- a/wServer/wServer.csproj
+++ b/wServer/wServer.csproj
@@ -106,6 +106,9 @@
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="RotMG.Common">
+      <HintPath>..\RotMG.Common.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core">
@@ -123,6 +126,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="generator\DungeonGenerator.cs" />
+    <Compile Include="generator\dungeon\DungeonGraph.cs" />
+    <Compile Include="generator\dungeon\DungeonObject.cs" />
+    <Compile Include="generator\dungeon\DungeonTile.cs" />
+    <Compile Include="generator\dungeon\Edge.cs" />
+    <Compile Include="generator\dungeon\Room.cs" />
+    <Compile Include="generator\Generator.cs" />
+    <Compile Include="generator\Range.cs" />
+    <Compile Include="generator\Rasterizer.cs" />
+    <Compile Include="generator\RoomCollision.cs" />
+    <Compile Include="generator\SimpleJson.cs" />
+    <Compile Include="generator\templates\DungeonTemplate.cs" />
+    <Compile Include="generator\templates\MapBackground.cs" />
+    <Compile Include="generator\templates\MapCorridor.cs" />
+    <Compile Include="generator\templates\MapOverlay.cs" />
+    <Compile Include="generator\templates\pirateCave\Background.cs" />
+    <Compile Include="generator\templates\pirateCave\BossRoom.cs" />
+    <Compile Include="generator\templates\pirateCave\Corridor.cs" />
+    <Compile Include="generator\templates\pirateCave\NormalRoom.cs" />
+    <Compile Include="generator\templates\pirateCave\Overlay.cs" />
+    <Compile Include="generator\templates\pirateCave\PirateCaveTemplate.cs" />
+    <Compile Include="generator\templates\pirateCave\StartRoom.cs" />
+    <Compile Include="generator\Zlib.cs" />
     <Compile Include="logic\Behavior.cs" />
     <Compile Include="logic\behaviors\Aoe.cs" />
     <Compile Include="logic\behaviors\ApplySetpiece.cs" />
