Mad Lab DungeonGen

--- a/DungeonGen/DungeonGen.csproj
+++ b/DungeonGen/DungeonGen.csproj
@@ -63,6 +63,12 @@
     <Compile Include="Templates\Abyss\StartRoom.cs" />
     <Compile Include="Templates\Abyss\TreasureRoom.cs" />
     <Compile Include="Templates\DungeonTemplate.cs" />
+    <Compile Include="Templates\MadLab\BossRoom.cs" />
+    <Compile Include="Templates\MadLab\Corridor.cs" />
+    <Compile Include="Templates\MadLab\MadLabTemplate.cs" />
+    <Compile Include="Templates\MadLab\NormalRoom.cs" />
+    <Compile Include="Templates\MadLab\Overlay.cs" />
+    <Compile Include="Templates\MadLab\StartRoom.cs" />
     <Compile Include="Templates\MapCorridor.cs" />
     <Compile Include="Templates\MapRender.cs" />
     <Compile Include="Templates\PirateCave\Background.cs" />
@@ -76,6 +82,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Templates\Abyss\template.jm" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Templates\MadLab\template.jm" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
