--- a/wServer/wServer.cfg
+++ b/wServer/wServer.cfg
@@ -8,8 +8,8 @@ whiteList:false
 verifyEmail:false
 whitelistTurnOff:2014-07-31 12:00:00
 serverDomain:http://127.0.0.1:8080
-broadcastNews:true
-testingMerchants:true
+broadcastNews:false
+testingMerchants:false
 #serverEmail:
 #serverEmailPassword:
 #smtpHost:
