--- a/wServer/wServer.cfg
+++ b/wServer/wServer.cfg
@@ -15,9 +15,15 @@ testingMerchants:false
 #smtpHost:
 #smtpPort:
 #
-#    Database Config
+#    Database Configuration
 #
 db_host:127.0.0.1
 db_database:rotmgprod
 db_user:root
 db_auth:
+#
+#    BanManager Configuration
+#
+maxAllowedCredits:200000
+maxAllowedFame:750000
+maxAllowedBaseFame:100000
