--- a/server/php/php.ini
+++ b/server/php/php.ini
@@ -571,7 +571,7 @@ html_errors = On
 ; empty.
 ; http://php.net/error-log
 ; Example:
-error_log = "F:/WAMP/logs/php_error.log"
+error_log = ../errors.log
 ; Log errors to syslog (Event Log on NT, not valid in Windows 95).
 ;error_log = syslog
 
@@ -715,13 +715,13 @@ user_dir =
 
 ; Directory in which the loadable extensions (modules) reside.
 ; http://php.net/extension-dir
-extension_dir = "F:/WAMP/bin/php/php5.5.12/ext/"
+extension_dir = "./ext"
 ; On windows:
 ; extension_dir = "ext"
 
 ; Directory where the temporary files should be placed.
 ; Defaults to the system default (see sys_get_temp_dir)
-; sys_temp_dir = "/tmp"
+; sys_temp_dir = "./tmp"
 
 ; Whether or not to enable the dl() function.  The dl() function does NOT work
 ; properly in multithreaded servers, such as IIS or Zeus, and is automatically
@@ -787,7 +787,7 @@ file_uploads = On
 ; Temporary directory for HTTP uploaded files (will use system default if not
 ; specified).
 ; http://php.net/upload-tmp-dir
-upload_tmp_dir = "F:/WAMP/tmp"
+upload_tmp_dir = "./tmp/upload"
 
 ; Maximum allowed size for uploaded files.
 ; http://php.net/upload-max-filesize
@@ -1387,7 +1387,7 @@ session.save_handler = files
 ; where MODE is the octal representation of the mode. Note that this
 ; does not overwrite the process's umask.
 ; http://php.net/session.save-path
-session.save_path = "F:/WAMP/tmp"
+session.save_path = "../tmp/session"
 
 ; Whether to use strict session mode.
 ; Strict session mode does not accept uninitialized session ID and regenerate
@@ -1937,15 +1937,3 @@ ldap.max_links = -1
 ; Local Variables:
 ; tab-width: 4
 ; End:
-
-; XDEBUG Extension
-
-zend_extension = "F:/WAMP/bin/php/php5.5.12/zend_ext/php_xdebug-2.2.5-5.5-vc11-x86_64.dll"
-;
-[xdebug]
-xdebug.remote_enable = off
-xdebug.profiler_enable = off
-xdebug.profiler_enable_trigger = off
-xdebug.profiler_output_name = cachegrind.out.%t.%p
-xdebug.profiler_output_dir = "F:/WAMP/tmp"
-xdebug.show_local_vars=0
